@@ -3,18 +3,25 @@ package com.example.PetLog.Snack;
 import com.example.PetLog.Comments.CommentsRepository;
 import com.example.PetLog.Likes.LikesRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 
 @Service
 public class SnackServiceImp implements SnackService {
 
     @Autowired
     SnackRepository snackRepository;
+
     @Autowired
     LikesRepository likesRepository;
+
     @Autowired
     CommentsRepository commentsRepository;
 
@@ -28,48 +35,33 @@ public class SnackServiceImp implements SnackService {
         List<SnackEntity> list = snackRepository.findAll();
 
         return list.stream().map(entity -> {
-            SnackDTO dto = new SnackDTO();
-            dto.setSnackId(entity.getSnackId());
-            dto.setSnackTitle(entity.getSnackTitle());
-            dto.setSnackRecipe(entity.getSnackRecipe());
-            dto.setSnackImagename(entity.getSnackImage());
-            dto.setSnackDate(entity.getSnackDate());
-            dto.setSnackReadcnt(entity.getSnackReadcnt());
-            dto.setUserId(entity.getUserId());
-
-            // 💡 user_login_id도 필요하다면 user 객체가 lazy 로딩 되지 않게 처리 필요
+            SnackDTO dto = new SnackDTO(entity); // DTO 생성자 활용
             if (entity.getUser() != null) {
                 dto.setUserLoginId(entity.getUser().getUserLoginId());
             }
-
             return dto;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @Override
     public SnackDTO detail(long snackId) {
         SnackEntity snackEntity = snackRepository.findById(snackId)
-                .orElseThrow(()->new RuntimeException("간식 레시피를 찾을 수 없습니다: " + snackId));
+                .orElseThrow(() -> new RuntimeException("간식 레시피를 찾을 수 없습니다: " + snackId));
 
-        String userLoginId = (snackEntity.getUser() !=null) ? snackEntity.getUser().getUserLoginId() : "알 수 없음";
-
-        // 3. SnackEntity → SnackDTO 변환
-        SnackDTO dto = new SnackDTO();
-        dto.setSnackId(snackEntity.getSnackId());
-        dto.setSnackTitle(snackEntity.getSnackTitle());
-        dto.setSnackRecipe(snackEntity.getSnackRecipe());
-        dto.setSnackImagename(snackEntity.getSnackImage());
-        dto.setSnackDate(snackEntity.getSnackDate());
-        dto.setSnackReadcnt(snackEntity.getSnackReadcnt());
-        dto.setUserId(snackEntity.getUserId());
-        dto.setUserLoginId(userLoginId);
+        SnackDTO dto = new SnackDTO(snackEntity);
+        if (snackEntity.getUser() != null) {
+            dto.setUserLoginId(snackEntity.getUser().getUserLoginId());
+        } else {
+            dto.setUserLoginId("알 수 없음");
+        }
         dto.setUser(snackEntity.getUser());
         return dto;
     }
 
     @Override
-    public SnackEntity getSnack(Long snackId) { //snackId에 해당하는 데이터 가져오기 from DB
-        return snackRepository.findById(snackId).orElseThrow(() -> new RuntimeException("레시피를 찾을 수 없습니다: " + snackId));
+    public SnackEntity getSnack(Long snackId) {
+        return snackRepository.findById(snackId)
+                .orElseThrow(() -> new RuntimeException("레시피를 찾을 수 없습니다: " + snackId));
     }
 
     @Override
@@ -79,20 +71,19 @@ public class SnackServiceImp implements SnackService {
 
     @Override
     public void delete(Long snackId) {
-        // 댓글 삭제
+        // 댓글, 좋아요 삭제 먼저
         commentsRepository.deleteBysnackId(snackId);
-        // 좋아요 삭제
         likesRepository.deleteBysnackId(snackId);
-        // 게시글 삭제
+
         snackRepository.deleteById(snackId);
     }
 
-    //지수 추가 - 회원탈퇴
+    // 회원 탈퇴 관련
     @Override
     public List<SnackEntity> findByUserId(Long userId) {
         return snackRepository.findAllByUser_UserId(userId);
     }
-    //지수 추가 - 회원탈퇴
+
     @Override
     public void deleteByUserId(Long userId) {
         snackRepository.deleteByUser_UserId(userId);
@@ -106,29 +97,22 @@ public class SnackServiceImp implements SnackService {
     @Override
     public List<SnackDTO> searchSnacks(String postType, String keyword) {
         List<SnackEntity> entities;
+
         if ("title".equals(postType)) {
             entities = snackRepository.findBySnackTitleContaining(keyword);
         } else if ("content".equals(postType)) {
             entities = snackRepository.findBySnackRecipeContaining(keyword);
         } else {
-            entities = new ArrayList<>();
+            entities = List.of();
         }
 
         return entities.stream().map(entity -> {
-            SnackDTO dto = new SnackDTO();
-            dto.setSnackId(entity.getSnackId());
-            dto.setSnackTitle(entity.getSnackTitle());
-            dto.setSnackRecipe(entity.getSnackRecipe());
-            dto.setSnackImagename(entity.getSnackImage());
-            dto.setSnackDate(entity.getSnackDate());
-            dto.setSnackReadcnt(entity.getSnackReadcnt());
-            dto.setUserId(entity.getUserId());
-
+            SnackDTO dto = new SnackDTO(entity);
             if (entity.getUser() != null) {
                 dto.setUserLoginId(entity.getUser().getUserLoginId());
             }
             return dto;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @Override
@@ -141,5 +125,27 @@ public class SnackServiceImp implements SnackService {
         return likesRepository.countBySnack_SnackId(snackId);
     }
 
+    @Override
+    public Page<SnackDTO> findPagedSnacks(Pageable pageable) {
+        // 페이징 오프셋, 한 페이지 크기
+        int offset = (int) pageable.getOffset();
+        int limit = pageable.getPageSize();
 
+        // 페이징 네이티브 쿼리 등 커스텀 메서드 필요
+        List<SnackEntity> snacks = snackRepository.findSnacksPaged(offset, limit);
+        int total = snackRepository.countAllSnacks();
+
+        List<SnackDTO> snackDTOs = snacks.stream()
+                .map(entity -> {
+                    SnackDTO dto = new SnackDTO(entity);
+                    if (entity.getUser() != null) {
+                        dto.setUserLoginId(entity.getUser().getUserLoginId());
+                    }
+                    return dto;
+                })
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(snackDTOs, pageable, total);
+    }
 }
+
